// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TwoPaneCarousel component navigates to next page 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -21,11 +21,11 @@
                <div
                  style=\\"overflow-x: hidden;\\"
                >
                  <div
                    class=\\"react-swipeable-view-container\\"
-                   style=\\"flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;\\"
+                   style=\\"flex-direction: row; transition: transform 0.35s cubic-bezier(0.15, 0.3, 0.25, 1) 0s; direction: ltr; display: flex; will-change: transform; transform: translate(-400%, 0);\\"
                  >
                    <div
                      aria-hidden=\\"false\\"
                      class=\\"Carousel__slide--global\\"
                      data-swipeable=\\"true\\"
@@ -37,40 +37,21 @@
                        <div
                          class=\\"Carousel-slide-158 TwoPaneCarousel-leftPaneSlide-151\\"
                          data-test-class-name=\\"slide\\"
                          style=\\"width: 100%;\\"
                        >
-                         <svg
-                           class=\\"TwoPaneCarousel-brandIcon-148\\"
-                           preserveAspectRatio=\\"xMinYMin\\"
-                         />
                          <h2
                            class=\\"MuiTypography-root TwoPaneCarousel-heading-149 Typography-root-167 Typography-underline-169 MuiTypography-h1\\"
                            data-testid=\\"typography\\"
                          >
-                           H1 Heading running onto 2 lines
+                           H1 Heading
                          </h2>
                          <div
                            class=\\"TwoPaneCarousel-text-152\\"
                          >
-                           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ligula nisi, condimentum facilisis hendrerit eget, sollicitudin non sapien. Class aptent taciti sociosqu ad litora.
-                           <div>
-                             <a
-                               class=\\"MuiTypography-root MuiLink-root MuiLink-underlineHover TwoPaneCarousel-cta-154 AnchorLink-root-177 Anchorlink MuiTypography-colorPrimary\\"
-                               type=\\"button\\"
-                             >
-                               <span>
-                                 Read the full story
-                               </span>
-                               <svg
-                                 aria-hidden=\\"true\\"
-                                 class=\\"AnchorLink-icon-181\\"
-                                 data-testid=\\"internal\\"
-                                 focusable=\\"false\\"
-                               />
-                             </a>
-                           </div>
+                           Aliquip velit exercitation sunt eiusmod. Ipsum est quis dolore cupidatat nisi reprehenderit aliquip exercitation. Magna mollit Lorem est aliqua consequat officia cillum dolor.
+                           <div />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
@@ -107,18 +88,23 @@
              <span
                class=\\"SlideControls-middleContainer-188\\"
              >
                <span
                  class=\\"SlideControls-slidingSlot-187\\"
+               >
+                 <span
+                   class=\\"SlideControls-numbers-190 SlideControls-up-191\\"
                  >
                    <span
-                   class=\\"SlideControls-numbers-190\\"
+                     class=\\"SlideControls-number-195\\"
                    >
+                     01
+                   </span>
                    <span
                      class=\\"SlideControls-number-195 SlideControls-active-194\\"
                    >
-                     01
+                     02
                    </span>
                  </span>
                </span>
                <span
                  class=\\"SlideControls-total-193\\"
@@ -166,11 +152,11 @@
              <div
                style=\\"overflow-x: hidden;\\"
              >
                <div
                  class=\\"react-swipeable-view-container\\"
-                 style=\\"flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;\\"
+                 style=\\"flex-direction: row; transition: transform 0.35s cubic-bezier(0.15, 0.3, 0.25, 1) 0s; direction: ltr; display: flex; will-change: transform; transform: translate(-400%, 0);\\"
                >
                  <div
                    aria-hidden=\\"false\\"
                    class=\\"Carousel__slide--global\\"
                    data-swipeable=\\"true\\""
`;

exports[`TwoPaneCarousel component navigates to next page on mobile 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -13,11 +13,11 @@
            <div
              style=\\"overflow-x: hidden;\\"
            >
              <div
                class=\\"react-swipeable-view-container\\"
-               style=\\"flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform; height: 0px;\\"
+               style=\\"flex-direction: row; transition: transform 0.35s cubic-bezier(0.15, 0.3, 0.25, 1) 0s; direction: ltr; display: flex; will-change: transform; height: 0px; transform: translate(-400%, 0);\\"
              >
                <div
                  aria-hidden=\\"false\\"
                  class=\\"Carousel__slide--global\\"
                  data-swipeable=\\"true\\"
@@ -29,19 +29,15 @@
                    <div
                      class=\\"Carousel-slide-306 TwoPaneCarousel-leftPaneSlide-299\\"
                      data-test-class-name=\\"slide\\"
                      style=\\"width: 100%;\\"
                    >
-                     <svg
-                       class=\\"TwoPaneCarousel-brandIcon-296\\"
-                       preserveAspectRatio=\\"xMinYMin\\"
-                     />
                      <h2
                        class=\\"MuiTypography-root TwoPaneCarousel-heading-297 Typography-root-315 Typography-underline-317 MuiTypography-h2\\"
                        data-testid=\\"typography\\"
                      >
-                       H1 Heading running onto 2 lines
+                       H1 Heading
                      </h2>
                    </div>
                  </div>
                </div>
              </div>
@@ -58,11 +54,11 @@
            <div
              style=\\"overflow-x: hidden;\\"
            >
              <div
                class=\\"react-swipeable-view-container\\"
-               style=\\"flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform; height: 0px;\\"
+               style=\\"flex-direction: row; transition: transform 0.35s cubic-bezier(0.15, 0.3, 0.25, 1) 0s; direction: ltr; display: flex; will-change: transform; height: 0px; transform: translate(-400%, 0);\\"
              >
                <div
                  aria-hidden=\\"false\\"
                  class=\\"Carousel__slide--global\\"
                  data-swipeable=\\"true\\"
@@ -82,27 +78,12 @@
                        src=\\"path-to-image\\"
                      />
                      <div
                        class=\\"TwoPaneCarousel-text-300\\"
                      >
-                       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ligula nisi, condimentum facilisis hendrerit eget, sollicitudin non sapien. Class aptent taciti sociosqu ad litora.
-                       <div>
-                         <a
-                           class=\\"MuiTypography-root MuiLink-root MuiLink-underlineHover TwoPaneCarousel-cta-302 AnchorLink-root-325 Anchorlink MuiTypography-colorPrimary\\"
-                           type=\\"button\\"
-                         >
-                           <span>
-                             Read the full story
-                           </span>
-                           <svg
-                             aria-hidden=\\"true\\"
-                             class=\\"AnchorLink-icon-329\\"
-                             data-testid=\\"internal\\"
-                             focusable=\\"false\\"
-                           />
-                         </a>
-                       </div>
+                       Aliquip velit exercitation sunt eiusmod. Ipsum est quis dolore cupidatat nisi reprehenderit aliquip exercitation. Magna mollit Lorem est aliqua consequat officia cillum dolor.
+                       <div />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
@@ -139,18 +120,23 @@
          <span
            class=\\"SlideControls-middleContainer-336\\"
          >
            <span
              class=\\"SlideControls-slidingSlot-335\\"
+           >
+             <span
+               class=\\"SlideControls-numbers-338 SlideControls-up-339\\"
              >
                <span
-               class=\\"SlideControls-numbers-338\\"
+                 class=\\"SlideControls-number-343\\"
                >
+                 01
+               </span>
                <span
                  class=\\"SlideControls-number-343 SlideControls-active-342\\"
                >
-                 01
+                 02
                </span>
              </span>
            </span>
            <span
              class=\\"SlideControls-total-341\\""
`;

exports[`TwoPaneCarousel component navigates to previous page 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -21,11 +21,11 @@
                <div
                  style=\\"overflow-x: hidden;\\"
                >
                  <div
                    class=\\"react-swipeable-view-container\\"
-                   style=\\"flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;\\"
+                   style=\\"flex-direction: row; transition: transform 0.35s cubic-bezier(0.15, 0.3, 0.25, 1) 0s; direction: ltr; display: flex; will-change: transform; transform: translate(-200%, 0);\\"
                  >
                    <div
                      aria-hidden=\\"false\\"
                      class=\\"Carousel__slide--global\\"
                      data-swipeable=\\"true\\"
@@ -37,41 +37,16 @@
                        <div
                          class=\\"Carousel-slide-232 TwoPaneCarousel-leftPaneSlide-225\\"
                          data-test-class-name=\\"slide\\"
                          style=\\"width: 100%;\\"
                        >
-                         <svg
-                           class=\\"TwoPaneCarousel-brandIcon-222\\"
-                           preserveAspectRatio=\\"xMinYMin\\"
-                         />
                          <h2
                            class=\\"MuiTypography-root TwoPaneCarousel-heading-223 Typography-root-241 Typography-underline-243 MuiTypography-h1\\"
                            data-testid=\\"typography\\"
                          >
-                           H1 Heading running onto 2 lines
+                           H1 Heading
                          </h2>
-                         <div
-                           class=\\"TwoPaneCarousel-text-226\\"
-                         >
-                           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ligula nisi, condimentum facilisis hendrerit eget, sollicitudin non sapien. Class aptent taciti sociosqu ad litora.
-                           <div>
-                             <a
-                               class=\\"MuiTypography-root MuiLink-root MuiLink-underlineHover TwoPaneCarousel-cta-228 AnchorLink-root-251 Anchorlink MuiTypography-colorPrimary\\"
-                               type=\\"button\\"
-                             >
-                               <span>
-                                 Read the full story
-                               </span>
-                               <svg
-                                 aria-hidden=\\"true\\"
-                                 class=\\"AnchorLink-icon-255\\"
-                                 data-testid=\\"internal\\"
-                                 focusable=\\"false\\"
-                               />
-                             </a>
-                           </div>
-                         </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
@@ -109,14 +84,19 @@
              >
                <span
                  class=\\"SlideControls-slidingSlot-261\\"
                >
                  <span
-                   class=\\"SlideControls-numbers-264\\"
+                   class=\\"SlideControls-numbers-264 SlideControls-down-266\\"
                  >
                    <span
                      class=\\"SlideControls-number-269 SlideControls-active-268\\"
+                   >
+                     04
+                   </span>
+                   <span
+                     class=\\"SlideControls-number-269\\"
                    >
                      01
                    </span>
                  </span>
                </span>
@@ -166,11 +146,11 @@
              <div
                style=\\"overflow-x: hidden;\\"
              >
                <div
                  class=\\"react-swipeable-view-container\\"
-                 style=\\"flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;\\"
+                 style=\\"flex-direction: row; transition: transform 0.35s cubic-bezier(0.15, 0.3, 0.25, 1) 0s; direction: ltr; display: flex; will-change: transform; transform: translate(-200%, 0);\\"
                >
                  <div
                    aria-hidden=\\"false\\"
                    class=\\"Carousel__slide--global\\"
                    data-swipeable=\\"true\\""
`;

exports[`TwoPaneCarousel component navigates to previous page on mobile 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -13,11 +13,11 @@
            <div
              style=\\"overflow-x: hidden;\\"
            >
              <div
                class=\\"react-swipeable-view-container\\"
-               style=\\"flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform; height: 0px;\\"
+               style=\\"flex-direction: row; transition: transform 0.35s cubic-bezier(0.15, 0.3, 0.25, 1) 0s; direction: ltr; display: flex; will-change: transform; height: 0px; transform: translate(-200%, 0);\\"
              >
                <div
                  aria-hidden=\\"false\\"
                  class=\\"Carousel__slide--global\\"
                  data-swipeable=\\"true\\"
@@ -29,19 +29,15 @@
                    <div
                      class=\\"Carousel-slide-378 TwoPaneCarousel-leftPaneSlide-371\\"
                      data-test-class-name=\\"slide\\"
                      style=\\"width: 100%;\\"
                    >
-                     <svg
-                       class=\\"TwoPaneCarousel-brandIcon-368\\"
-                       preserveAspectRatio=\\"xMinYMin\\"
-                     />
                      <h2
                        class=\\"MuiTypography-root TwoPaneCarousel-heading-369 Typography-root-387 Typography-underline-389 MuiTypography-h2\\"
                        data-testid=\\"typography\\"
                      >
-                       H1 Heading running onto 2 lines
+                       H1 Heading
                      </h2>
                    </div>
                  </div>
                </div>
              </div>
@@ -58,11 +54,11 @@
            <div
              style=\\"overflow-x: hidden;\\"
            >
              <div
                class=\\"react-swipeable-view-container\\"
-               style=\\"flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform; height: 0px;\\"
+               style=\\"flex-direction: row; transition: transform 0.35s cubic-bezier(0.15, 0.3, 0.25, 1) 0s; direction: ltr; display: flex; will-change: transform; height: 0px; transform: translate(-200%, 0);\\"
              >
                <div
                  aria-hidden=\\"false\\"
                  class=\\"Carousel__slide--global\\"
                  data-swipeable=\\"true\\"
@@ -78,39 +74,18 @@
                    >
                      <img
                        alt=\\"Lorem ipsum\\"
                        class=\\"TwoPaneCarousel-image-370 Media-root-395\\"
                        src=\\"path-to-image\\"
-                     />
-                     <div
-                       class=\\"TwoPaneCarousel-text-372\\"
-                     >
-                       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ligula nisi, condimentum facilisis hendrerit eget, sollicitudin non sapien. Class aptent taciti sociosqu ad litora.
-                       <div>
-                         <a
-                           class=\\"MuiTypography-root MuiLink-root MuiLink-underlineHover TwoPaneCarousel-cta-374 AnchorLink-root-397 Anchorlink MuiTypography-colorPrimary\\"
-                           type=\\"button\\"
-                         >
-                           <span>
-                             Read the full story
-                           </span>
-                           <svg
-                             aria-hidden=\\"true\\"
-                             class=\\"AnchorLink-icon-401\\"
-                             data-testid=\\"internal\\"
-                             focusable=\\"false\\"
                      />
-                         </a>
-                       </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
-       </div>
        <div
          class=\\"SlideControls-root-403 SlideControls-fullSize-404 TwoPaneCarousel-controls-373\\"
        >
          <button
            aria-label=\\"previous\\"
@@ -141,14 +116,19 @@
          >
            <span
              class=\\"SlideControls-slidingSlot-407\\"
            >
              <span
-               class=\\"SlideControls-numbers-410\\"
+               class=\\"SlideControls-numbers-410 SlideControls-down-412\\"
              >
                <span
                  class=\\"SlideControls-number-415 SlideControls-active-414\\"
+               >
+                 04
+               </span>
+               <span
+                 class=\\"SlideControls-number-415\\"
                >
                  01
                </span>
              </span>
            </span>"
`;

exports[`TwoPaneCarousel component renders a single pane carousel 1`] = `
<div>
  <div
    class="TwoPaneCarousel-root-73"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-align-items-xs-flex-start"
    >
      <div
        class="MuiGrid-root Grid-item-145 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-xl-4"
      >
        <div
          class="TwoPaneCarousel-leftPane-82"
        >
          <div
            class="Carousel-wrapper-87"
          >
            <div
              class="Carousel-root-83 Carousel-opacity-90 Carousel-swipable-92"
              data-testid="carousel"
            >
              <div
                style="overflow-x: hidden;"
              >
                <div
                  class="react-swipeable-view-container"
                  style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
                >
                  <div
                    aria-hidden="false"
                    class="Carousel__slide--global"
                    data-swipeable="true"
                    style="width: 100%; flex-shrink: 0; overflow: auto;"
                  >
                    <div
                      class="Carousel-page-86"
                    >
                      <div
                        class="Carousel-slide-84 TwoPaneCarousel-leftPaneSlide-77"
                        data-test-class-name="slide"
                        style="width: 100%;"
                      >
                        <svg
                          class="TwoPaneCarousel-brandIcon-74"
                          preserveAspectRatio="xMinYMin"
                        />
                        <h2
                          class="MuiTypography-root TwoPaneCarousel-heading-75 Typography-root-93 Typography-underline-95 MuiTypography-h1"
                          data-testid="typography"
                        >
                          H1 Heading running onto 2 lines
                        </h2>
                        <div
                          class="TwoPaneCarousel-text-78"
                        >
                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ligula nisi, condimentum facilisis hendrerit eget, sollicitudin non sapien. Class aptent taciti sociosqu ad litora.
                          <div>
                            <a
                              class="MuiTypography-root MuiLink-root MuiLink-underlineHover TwoPaneCarousel-cta-80 AnchorLink-root-103 Anchorlink MuiTypography-colorPrimary"
                              type="button"
                            >
                              <span>
                                Read the full story
                              </span>
                              <svg
                                aria-hidden="true"
                                class="AnchorLink-icon-107"
                                data-testid="internal"
                                focusable="false"
                              />
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="SlideControls-root-109 TwoPaneCarousel-controls-79"
          >
            <button
              aria-label="previous"
              class="MuiButtonBase-root MuiIconButton-root IconButton-root-136 iconButton IconButton-medium-142 IconButton-text-138"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root SlideControls-chevron-115"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <span
              class="SlideControls-middleContainer-114"
            >
              <span
                class="SlideControls-slidingSlot-113"
              >
                <span
                  class="SlideControls-numbers-116"
                >
                  <span
                    class="SlideControls-number-121 SlideControls-active-120"
                  >
                    01
                  </span>
                </span>
              </span>
              <span
                class="SlideControls-total-119"
              >
                04
              </span>
            </span>
            <button
              aria-label="next"
              class="MuiButtonBase-root MuiIconButton-root IconButton-root-136 iconButton IconButton-medium-142 IconButton-text-138"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root SlideControls-chevron-115"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root Grid-item-145 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-xl-8"
      >
        <div
          class="Carousel-wrapper-87"
        >
          <div
            class="Carousel-root-83 Carousel-swipable-92"
            data-testid="carousel"
          >
            <div
              style="overflow-x: hidden;"
            >
              <div
                class="react-swipeable-view-container"
                style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
              >
                <div
                  aria-hidden="false"
                  class="Carousel__slide--global"
                  data-swipeable="true"
                  style="width: 100%; flex-shrink: 0; overflow: auto;"
                >
                  <div
                    class="Carousel-page-86"
                  >
                    <div
                      class="Carousel-slide-84"
                      data-test-class-name="slide"
                      style="width: 100%;"
                    >
                      <img
                        alt="Lorem ipsum"
                        class="TwoPaneCarousel-image-76 Media-root-101"
                        src="path-to-image"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="TwoPaneCarousel-wrapper-81"
    >
      Lorem ipsum
    </div>
  </div>
</div>
`;

exports[`TwoPaneCarousel component renders correctly 1`] = `
<div>
  <div
    class="TwoPaneCarousel-root-1"
  >
    <div>
      <div
        class="Carousel-wrapper-15"
      >
        <div
          class="Carousel-root-11 Carousel-opacity-18 Carousel-swipable-20"
          data-testid="carousel"
        >
          <div
            style="overflow-x: hidden;"
          >
            <div
              class="react-swipeable-view-container"
              style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
            >
              <div
                aria-hidden="false"
                class="Carousel__slide--global"
                data-swipeable="true"
                style="width: 100%; flex-shrink: 0; overflow: auto;"
              >
                <div
                  class="Carousel-page-14"
                >
                  <div
                    class="Carousel-slide-12 TwoPaneCarousel-leftPaneSlide-5"
                    data-test-class-name="slide"
                    style="width: 100%;"
                  >
                    <svg
                      class="TwoPaneCarousel-brandIcon-2"
                      preserveAspectRatio="xMinYMin"
                    />
                    <h2
                      class="MuiTypography-root TwoPaneCarousel-heading-3 Typography-root-21 Typography-underline-23 MuiTypography-h2"
                      data-testid="typography"
                    >
                      H1 Heading running onto 2 lines
                    </h2>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Carousel-wrapper-15"
      >
        <div
          class="Carousel-root-11 Carousel-opacity-18 Carousel-swipable-20"
          data-testid="carousel"
        >
          <div
            style="overflow-x: hidden;"
          >
            <div
              class="react-swipeable-view-container"
              style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
            >
              <div
                aria-hidden="false"
                class="Carousel__slide--global"
                data-swipeable="true"
                style="width: 100%; flex-shrink: 0; overflow: auto;"
              >
                <div
                  class="Carousel-page-14"
                >
                  <div
                    class="Carousel-slide-12 TwoPaneCarousel-leftPaneSlide-5"
                    data-test-class-name="slide"
                    style="width: 100%;"
                  >
                    <img
                      alt="Lorem ipsum"
                      class="TwoPaneCarousel-image-4 Media-root-29"
                      src="path-to-image"
                    />
                    <div
                      class="TwoPaneCarousel-text-6"
                    >
                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ligula nisi, condimentum facilisis hendrerit eget, sollicitudin non sapien. Class aptent taciti sociosqu ad litora.
                      <div>
                        <a
                          class="MuiTypography-root MuiLink-root MuiLink-underlineHover TwoPaneCarousel-cta-8 AnchorLink-root-31 Anchorlink MuiTypography-colorPrimary"
                          type="button"
                        >
                          <span>
                            Read the full story
                          </span>
                          <svg
                            aria-hidden="true"
                            class="AnchorLink-icon-35"
                            data-testid="internal"
                            focusable="false"
                          />
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="SlideControls-root-37 SlideControls-fullSize-38 TwoPaneCarousel-controls-7"
      >
        <button
          aria-label="previous"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-64 iconButton IconButton-medium-70 IconButton-text-66"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root SlideControls-chevron-43"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <span
          class="SlideControls-middleContainer-42"
        >
          <span
            class="SlideControls-slidingSlot-41"
          >
            <span
              class="SlideControls-numbers-44"
            >
              <span
                class="SlideControls-number-49 SlideControls-active-48"
              >
                01
              </span>
            </span>
          </span>
          <span
            class="SlideControls-total-47"
          >
            04
          </span>
        </span>
        <button
          aria-label="next"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-64 iconButton IconButton-medium-70 IconButton-text-66"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root SlideControls-chevron-43"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="TwoPaneCarousel-wrapper-9"
    >
      Lorem ipsum
    </div>
  </div>
</div>
`;
